Added table for Fisher Coeff

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -241,7 +241,7 @@
 
 %------------------------------------------------------------------------------
 \appendix
-% \part*{Appendix}
+\part*{Appendix}
 % Add your appendices here - don't forget to also add them to \includeonly above
 \include{thesis_appendix_A}
 \include{thesis_appendix_B}
