--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -156,7 +156,7 @@ The future advancements of the AugerPrime~\cite{ANASTASI2022167497} will further
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/apjac7d4ef1_hr.jpg}
-  \caption{Localised excess or Li-Ma~\cite{} significance map at energies above 41 EeV and within a top-hat search angle $\Psi = 24^\circ$ in Galactic coordinates. The gray line indicates the super galactic plane. Area outside the field of view of the Observatory is shown in white. The dark red areas indicate the possible source locations of extragalactic UHECRs. Taken from~\cite{Abreu_2022}}
+  \caption{Localised excess or Li-Ma~\cite{Li:1983fv} significance map at energies above 41 EeV and within a top-hat search angle $\Psi = 24^\circ$ in Galactic coordinates. The gray line indicates the super galactic plane. Area outside the field of view of the Observatory is shown in white. The dark red areas indicate the possible source locations of extragalactic UHECRs. Taken from~\cite{Abreu_2022}}
   \label{fig:CR-anisotropy}
 \end{figure}
 
@@ -230,7 +230,7 @@ Other interactions such as Neutron Decay ($n \longrightarrow p + e^- + \nu_{e} $
 \end{equation}
 \begin{figure}[t!]
   \centering
-  \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Oscillation_sim_ternary.pdf}
+  \includegraphics[width=12.5cm]{thesis_figures/CRnNu/Oscillation_sim_ternary.pdf}
   \caption{A ternary plot to show the neutrino flavor oscillations. Two different flux ratio per flavor are shown. The propogation distance ??. Taken from~\cite{Ahlers:ISAPP2022}}
   \label{fig:Oscillation_ternary}
 \end{figure}
@@ -388,7 +388,7 @@ Combining the various messengers via which we can see the Universe can help bett
   Tidal disruption event& yes    & possible & possible & yes & AT2019dsg  AT2019fdr \\
   \hline
 \end{tabular}
-\caption{Table to test captions and labels.}
+\caption{Current status of Multimessenger observations.}
 \label{tab:Multimessenger}
 \end{table}
 
