--- a/thesis_skel/thesis_refs.bib
+++ b/thesis_skel/thesis_refs.bib
@@ -899,6 +899,15 @@ abstract = {ELVES have been regularly studied since 2013 with the twenty-four te
   author   = {C. Bonifazi},
   abstract = {We discuss the angular resolution obtained for events registered with the surface detector alone and for hybrid events, i.e., those observed simultaneously by both the surface and fluorescence detectors. The angular accuracy of the surface detector is directly extracted from the data itself and on an event by event basis, and is given as a function of the number of stations triggered by the event and of the zenith angle of the shower. We compare the angular resolution of the surface detector obtained from hybrid events with the one obtained from the surface detector alone.}
 }
+@article{Li:1983fv,
+  author  = {Li, T. -P. and Ma, Y. -Q.},
+  title   = {{Analysis methods for results in gamma-ray astronomy}},
+  doi     = {10.1086/161295},
+  journal = {Astrophys. J.},
+  volume  = {272},
+  pages   = {317--324},
+  year    = {1983}
+}
 @article{Abreu_2022,
   author        = {Abreu, Pedro and others},
   collaboration = {Pierre Auger},
