--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -329,7 +329,7 @@ As mentioned before to train the Fisher polynomial 20\% of the measured data sam
 \label{subsubsec:nu_sel_fisher_cut}
 After the training process a cut criterion is still needed to be established to best separate the signal and background distribution. This cut is evaluated by analysing the tail of the Fisher value distribution of the background. 
 
-The tail is fit using an exponential function in the logarithmic scale ($A \mathcal{F} + B$). The fitting is done between for the range $\mu + \sigma$ - $\mu + n\sigma$ where $\mu$ is the mean and $\sigma$ is the rms value of the distribution. n takes a value depending on the last non-zero angular bin for that region. The exponential assumption is only a reasonable guess especially due to the low statistics of the last few bins. The bin size can also affect the fit and is determined for each angular region by minimising the residual fit. This bin size is also verfied with the calculator available in python to negate the possibility of over binning or under binning. Table~\ref{} shows the \textit{observed} and \textit{predicted} values for the exponential fit procedure. The values are calculated by integrating from the start point mentioned in the first column till the end of the $\mathcal{F}$ distribution. The estimate using the exponential fit mostly agrees with the observed values. It agrees the best near the mean of the distribution and becomes worse near the tails. In some angular regions a secondary bump like structure is also seen. This is attributed to the form of the Fisher polynomial and the lack of the product term. The predicted values also include the uncertainties of the fit which slightly increases the predicted number of the background events. The cut, $\mathcal{F}_cut$ is calculated such that after 20 years of data taking with a full SD array 0.2 events are expected to pass for each sub-angular regions with a total of 1 background event for the full search angular range. 
+The tail is fit using an exponential function in the logarithmic scale ($A \mathcal{F} + B$). The fitting is done between for the range $\mu + \sigma$ - $\mu + n\sigma$ where $\mu$ is the mean and $\sigma$ is the rms value of the distribution. n takes a value depending on the last non-zero angular bin for that region. The exponential assumption is only a reasonable guess especially due to the low statistics of the last few bins. The bin size can also affect the fit and is determined for each angular region by minimising the residual fit. This bin size is also verfied with the calculator available in python to negate the possibility of over binning or under binning. Table~\ref{tab:Cut_eval} shows the \textit{observed} and \textit{predicted} values for the exponential fit procedure. The values are calculated by integrating from the start point mentioned in the first column till the end of the $\mathcal{F}$ distribution. The estimate using the exponential fit mostly agrees with the observed values. It agrees the best near the mean of the distribution and becomes worse near the tails. In the higher angular regions a secondary bump like structure is also seen. This is attributed to the form of the Fisher polynomial and the lack of the product term. The predicted values also include the uncertainties of the fit which slightly increases the predicted number of the background events. The cut, $\mathcal{F}_cut$ is calculated such that after 20 years of data taking with a full SD array 0.2 events are expected to pass for each sub-angular regions with a total of 1 background event for the full search angular range. 
 
 \begin{equation}
   \mathcal{F}_{cut} = \mathrm{\frac{log[1.25 \cdot B \cdot 0.2 \cdot \Delta (\mathcal{F}) / 20] - A}{B} }
@@ -388,6 +388,45 @@ A two-dimensional plot with the Fisher values on an event by event basis vs the 
   \end{tabular}
   \caption{Table to test captions and labels.}
   \label{tab:Selection_summ}
+\end{table}
+
+\begin{table}[h!]
+  \begin{subtable}[h]{\textwidth}
+  \centering
+  \begin{tabular}{ |P{1.0cm}||P{2.4cm}|P{2.4cm}|P{2.4cm}|P{2.4cm}|P{2.4cm}| }
+    \hline
+       \multicolumn{6}{|c|}{Evaluated Fisher Coefficients} \\
+       \hline
+        & Region 1 & Region 2& Region 3& Region 4 & Region 5 \\
+         &(58.5$^\circ$-61.5$^\circ$]&(61.5$^\circ$-64.5$^\circ$]&(64.5$^\circ$-67.5$^\circ$]& (67.5$^\circ$-70.5$^\circ$] & (70.5$^\circ$- 76.5$^\circ$] \\
+    \hline
+    $C_1$ & $3.06 \cdot 10^{-1}$ & $5.48 \cdot 10^{-1}$ & $7.36 \cdot 10^{-1}$                & $8.40 \cdot 10^{-1}$ & $9.61 \cdot 10^{-1}$ \\
+    $C_2$ & $5.05 \cdot 10^{-1}$ & $3.75 \cdot 10^{-1}$ & $2.57 \cdot 10^{-1}$                & $1.40 \cdot 10^{-1}$ & $1.99 \cdot 10^{-2}$ \\
+    $C_3$ & $8.03 \cdot 10^{-1}$ & $7.47 \cdot 10^{-1}$ & $6.22 \cdot 10^{-1}$                & $5.00 \cdot 10^{-1}$ & $2.74 \cdot 10^{-1}$ \\
+    $C_4$ & $7.92 \cdot 10^{-2}$ & $-3.90 \cdot 10^{-2}$ & $-6.90 \cdot 10^{-2}$                & $-7.90 \cdot 10^{-2}$ & $-2.27 \cdot 10^{-2}$ \\
+    \hline
+  \end{tabular}
+  \caption{Normalised Fisher coefficients obtained for each angular region}
+  \label{subtab:Fish_Coeff}
+ \end{subtable}
+ \newline
+ \vspace*{0.5 cm}
+ \newline
+  \begin{subtable}[h]{\textwidth}
+    \centering
+  \begin{tabular}{ |P{1.0cm}||P{2.4cm}|P{2.4cm}|P{2.4cm}|P{2.4cm}|P{2.4cm}| }
+    \hline
+        & Region 1 & Region 2& Region 3& Region 4 & Region 5 \\
+    \hline 
+    $a$ & $15.1 \pm 0.5$ & $14.3 \pm 0.8$ & $14.2 \pm 1.4$ & $14.3 \pm 1.7$                                       & $7.8 \pm 2.0$ \\
+    $b$ & $2.57 \pm 0.12$ & $2.94 \pm 0.22$ & $3.50 \pm 0.44$ & $4.63 \pm 0.65$                                       & $3.11 \pm 0.96$ \\
+    \hline
+  \end{tabular}
+  \caption{Fit parameters obtained after fitting $\mathrm{e^{a-bx}}$ to the tail of the Fisher distribution.}
+  \label{subtab:Fish_fit_params}
+  \end{subtable}
+  \caption*{Table to test captions and labels.}
+  \label{tab:Fish_analysis}
 \end{table}
 
 \subsection{Time evolution of selection parameters}
@@ -449,37 +488,23 @@ It was observed that by using the new triggers a 500-200\% improvement can be ac
 
 
 
+% \begin{figure}[t!]
+% \centering
+%   \begin{minipage}[t]{.45\textwidth}
+%     \centering
+%     \includegraphics[width=\linewidth]{thesis_figures/GEM_field.png}
 
-\begin{figure}[t!]
-\centering
-\includegraphics[width=\textwidth]{thesis_figures/NA64_MM.png}
-\caption{Left: Strip dimensions of the modules, Right:NA64 Micromega's working principle~\cite{}}
-\label{fig:Micromegas_na64}
-\end{figure}
-
-\begin{figure}[t!]
-\centering
-  \begin{minipage}[t]{.45\textwidth}
-    \centering
-    \includegraphics[width=\linewidth]{thesis_figures/GEM_field.png}
-
-    \caption{A sketch of GEM field lines~\cite{}.}
-    \label{fig:GEM_field}
-  \end{minipage}
-  \hfill
-  \begin{minipage}[t]{.45\textwidth}
-    \centering
-    \includegraphics[width=\linewidth]{thesis_figures/GEM_process.png}
-    \caption{Schematic of a triple GEM detector along with the working principle~\cite{}}
-    \label{fig:Triple_GEM}
-  \end{minipage}
-\end{figure}
-\begin{figure}[t!]
-\centering
-\includegraphics[width=\textwidth]{thesis_figures/linear_reg_new.png}
-\caption{Linear regression pictorially. }
-\label{fig:linear_regression}
-\end{figure}
+%     \caption{A sketch of GEM field lines~\cite{}.}
+%     \label{fig:GEM_field}
+%   \end{minipage}
+%   \hfill
+%   \begin{minipage}[t]{.45\textwidth}
+%     \centering
+%     \includegraphics[width=\linewidth]{thesis_figures/GEM_process.png}
+%     \caption{Schematic of a triple GEM detector along with the working principle~\cite{}}
+%     \label{fig:Triple_GEM}
+%   \end{minipage}
+% \end{figure}
 
 
 
