--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -337,7 +337,43 @@ The tail is fit using an exponential function in the logarithmic scale ($A \math
 
 The two polynomials mentioned in the above section are evaluated based on the fraction of neutrino events passing the $\mathcal{F}_{cut}$. As can be seen in fig.~\ref{}. The simplified Fisher polynomial either matches or outperforms the polynomial used in the previous analysis. The comparison is done only for the case where new triggers are included. The much higher number of events in this sample are required to achieve a sufficiently high background-signal separation especially in the low zenith angular regions where previously a more stringent number of station cut was needed to reduce noise. However, the new Fisher polynomial seems to perform even better for higher angles which could lead to an overall improvement of neutrino detection efficiency irrespective of energy. This is proved later in sec.~\ref{sec:det_exposure_calc}. Based on this comparison the polynomial given in~\ref{eq:fisher_poly_new} was used for signal-background separation is this analysis. 
 
-Fig~\ref{} shows the $\mathcal{F}_{cut}$ obtained for the different angular regions. 
+Fig~\ref{fig:Fisher_cut} shows the $\mathcal{F}_{cut}$ obtained for the different angular regions. 
+\begin{figure}[h!]
+  \centering
+   \begin{subfigure}[l]{.48\textwidth}
+     \centering
+     \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_58.5_61.5}.pdf}
+     \caption{58.5 61.5}
+     \label{fig:GEM1_after_prev}
+   \end{subfigure}
+   %\hfill
+   \begin{subfigure}[r]{.48\textwidth}
+     \centering
+     \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_61.5_64.5}.pdf}
+     \caption{61.5 64.5}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[l]{.48\textwidth}
+      \centering
+      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_64.5_67.5}.pdf}
+      \caption{64.5 67.5}
+    \end{subfigure}
+
+    \begin{subfigure}[r]{.48\textwidth}
+      \centering
+      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_67.5_70.5}.pdf}
+      \caption{67.5 70.5}
+    \end{subfigure}
+    \hfill    
+    \begin{subfigure}[r]{.48\textwidth}
+      \centering
+      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_70.5_73.5}.pdf}
+      \caption{70.5 76.5}
+   \end{subfigure}
+   \caption{Fisher Cut determination for the different angular regions. The exponential fit is shown in black. The blue line is the $\mathcal{F}_{cut}$ obtained from the fit. The black line is the $\mathcal{F}_{cut}$ obtained from the observed values.}
+    \label{fig:Fisher_cut}
+
+\end{figure}
 
 A two-dimensional plot with the Fisher values on an event by event basis vs the zenith angle is shown in fig~\ref{}. The blue dots represent the background events and the contour represents the signal events. The black line is obtained by setting the $\mathcal{F}_{cut}$ to the mid value of the bin and the extrapolating for a particular sub-angular region. The background events seem to be distributed non-uniformally within the angular subsamples. The linear interpolation ensures that the effective number of events is almost constant with the zenith angle. Anything above the cut line will be considered as a neutrino candidate. 
 
