--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -332,6 +332,7 @@ After the training process a cut criterion is still needed to be established to 
 The tail is fit using an exponential function in the logarithmic scale ($A \mathcal{F} + B$). The fitting is done between for the range $\mu + \sigma$ - $\mu + n\sigma$ where $\mu$ is the mean and $\sigma$ is the rms value of the distribution. n takes a value depending on the last non-zero angular bin for that region. The exponential assumption is only a reasonable guess especially due to the low statistics of the last few bins. The bin size can also affect the fit and is determined for each angular region by minimising the residual fit. This bin size is also verfied with the calculator available in python to negate the possibility of over binning or under binning. Table~\ref{tab:Cut_eval} shows the \textit{observed} and \textit{predicted} values for the exponential fit procedure. The values are calculated by integrating from the start point mentioned in the first column till the end of the $\mathcal{F}$ distribution. The estimate using the exponential fit mostly agrees with the observed values. It agrees the best near the mean of the distribution and becomes worse near the tails. In the higher angular regions a secondary bump like structure is also seen. This is attributed to the form of the Fisher polynomial and the lack of the product term. The predicted values also include the uncertainties of the fit which slightly increases the predicted number of the background events. The cut, $\mathcal{F}_cut$ is calculated such that after 20 years of data taking with a full SD array 0.2 events are expected to pass for each sub-angular regions with a total of 1 background event for the full search angular range. 
 
 \begin{equation}
+  label{eq:fisher_poly_cut}
   \mathcal{F}_{cut} = \mathrm{\frac{log[1.25 \cdot B \cdot 0.2 \cdot \Delta (\mathcal{F}) / 20] - A}{B} }
 \end{equation}
 
@@ -342,32 +343,32 @@ Fig~\ref{fig:Fisher_cut} shows the $\mathcal{F}_{cut}$ obtained for the differen
   \centering
    \begin{subfigure}[l]{.48\textwidth}
      \centering
-     \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_58.5_61.5}.pdf}
+     \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_region_58.5_61.5.pdf}
      \caption{58.5 61.5}
      \label{fig:GEM1_after_prev}
    \end{subfigure}
    %\hfill
    \begin{subfigure}[r]{.48\textwidth}
      \centering
-     \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_61.5_64.5}.pdf}
+     \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_region_61.5_64.5.pdf}
      \caption{61.5 64.5}
     \end{subfigure}
     \hfill
     \begin{subfigure}[l]{.48\textwidth}
       \centering
-      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_64.5_67.5}.pdf}
+      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_region_64.5_67.5.pdf}
       \caption{64.5 67.5}
     \end{subfigure}
 
     \begin{subfigure}[r]{.48\textwidth}
       \centering
-      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_67.5_70.5}.pdf}
+      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_region_67.5_70.5.pdf}
       \caption{67.5 70.5}
     \end{subfigure}
     \hfill    
     \begin{subfigure}[r]{.48\textwidth}
       \centering
-      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/{Fisher_fit_region_70.5_73.5}.pdf}
+      \includegraphics[width=\linewidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_fit_region_70.5_73.5.pdf}
       \caption{70.5 76.5}
    \end{subfigure}
    \caption{Fisher Cut determination for the different angular regions. The exponential fit is shown in black. The blue line is the $\mathcal{F}_{cut}$ obtained from the fit. The black line is the $\mathcal{F}_{cut}$ obtained from the observed values.}
@@ -375,7 +376,14 @@ Fig~\ref{fig:Fisher_cut} shows the $\mathcal{F}_{cut}$ obtained for the differen
 
 \end{figure}
 
-A two-dimensional plot with the Fisher values on an event by event basis vs the zenith angle is shown in fig~\ref{}. The blue dots represent the background events and the contour represents the signal events. The black line is obtained by setting the $\mathcal{F}_{cut}$ to the mid value of the bin and the extrapolating for a particular sub-angular region. The background events seem to be distributed non-uniformally within the angular subsamples. The linear interpolation ensures that the effective number of events is almost constant with the zenith angle. Anything above the cut line will be considered as a neutrino candidate. 
+A two-dimensional plot with the Fisher values on an event by event basis vs the zenith angle is shown in fig~\ref{fig:Fish_bkg_sig}. The blue dots represent the background events and the contour represents the signal events. The black line is obtained by setting the $\mathcal{F}_{cut}$ to the mid value of the bin and the extrapolating for a particular sub-angular region. The background events seem to be distributed non-uniformally within the angular subsamples. The linear interpolation ensures that the effective number of events is almost constant with the zenith angle. Anything above the cut line will be considered as a neutrino candidate. 
+
+\begin{figure}[t!]
+  \centering
+  \includegraphics[width=14.5cm]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_comp_bkg_sim_wnt.pdf}
+  \caption{Sim vs background}
+  \label{fig:Fish_bkg_sig}
+\end{figure}
 
 \begin{table}[h!]
   \centering
